# articles-server

./: Cargo.toml  README.md
server/: .gitignore  Cargo.toml
server/migrations/: 20210911080858_users.sql  20210911080912_articles.sql  20210911080914_tags.sql  20210911205541_links.sql
server/src/: main.rs  security.rs
server/src/api/: article.rs  links.rs  mod.rs  tags.rs  user.rs
server/src/db/: article.rs  links.rs  mod.rs  tags.rs  user.rs
server/src/utils/: extractor.rs  mod.rs
src/: create.sql  data.rs  facade.rs  main.rs  textindex.rs
templates/: base.html.tera  edit.html.tera  main.html.tera  view.html.tera
webapp/: package-lock.json  package.json
webapp/public/: index.html  manifest.json
webapp/src/: App.js  index.js
webapp/src/app/: store.js
webapp/src/components/: ArticleTags.js
webapp/src/data/: ArticleSlice.js  LinkSlice.js  TagSlice.js  UserSlice.js  utils.js
webapp/src/styling/: base.css
webapp/src/views/: ArticleEdit.js  ArticleFeed.js  ArticleView.js  Auth.js  LinkList.js  TagList.js
