[package]
name = "articles-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "*"
sqlx = { version = "*", features = [ "postgres", "chrono", "runtime-tokio-rustls", "migrate"] }
ormx = "*"

log="*"
env_logger="*"
thiserror="*"

chrono="*"

comrak="*"
whatlang="*"
thirtyfour = {version = "*", features = ["tokio"]}

blake3="*"
bcrypt="*"
base64="*"

const_format="*"
array-const-fn-init="*"
static_assertions="*"

